<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity"
        tools:ignore="FragmentTagUsage" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_bottom_sheet_map"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="50dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <!-- Your bottom sheet's content-->

        <TextView
            android:id="@+id/tvBottomSheetTitle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="5dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@color/blue_crayola"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/lnContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tvBottomSheetTitle">

            <LinearLayout
                android:id="@+id/lnDirection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/layoutUserInfo"
                app:layout_constraintTop_toBottomOf="@id/tvBottomSheetTitle">

                <TextView
                    android:id="@+id/tvDirectionTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/directing_from_your_location"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/distance" />

                <TextView
                    android:id="@+id/tvEstimateTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/estimate_time" />

            </LinearLayout>


            <include
                android:id="@+id/layoutShopPreview"
                layout="@layout/item_list_shop_map_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tvBottomSheetTitle" />

            <include
                android:id="@+id/layoutUserInfo"
                layout="@layout/item_list_pending_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tvBottomSheetTitle" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
